--- a/app/globals.css
+++ b/app/globals.css
@@ -22,6 +22,14 @@ body {
   background: #000000;
   
 }
+input{
+  background-color: #292929;
+  width: 100%;
+  padding: 15px 10px;
+  color: white;
+  outline: none;
+  border-radius: 10px;
+}
 
 .mybutton-container {
   padding: 1rem;
@@ -47,12 +55,24 @@ body {
   background: linear-gradient(360deg, rgba(157, 13, 61, 0) -23%, rgba(223, 81, 43, 0.76) 45.16%, #BF8C2C 103%);
 }
 
+.bell{
+  animation: shake 0.5s;
+  animation-iteration-count: infinite;
+}
+
+.messageInputBox{
+  margin-top: 0;
+  animation-duration: .5s;
+  animation-timing-function: ease-in;
+  animation-name: messagebox;
+}
+
 .ringAll {
   border: 2px solid #CE722C;
   position: absolute;
   border-radius: 999px;
   z-index: -10;
-  animation-duration: 6s;
+  animation-duration: 5s;
   animation-iteration-count: infinite;
 }
 
@@ -111,3 +131,21 @@ body {
   100% {height: 344px; width: 344px;opacity: 0;}
 }
 
+@keyframes messagebox {
+  0% {margin-top: 200vh;}
+  100% {margin-top: 0;}
+}
+
+@keyframes shake {
+  0% { transform: translate(1px, 1px) rotate(0deg); }
+  10% { transform: translate(-1px, -2px) rotate(-1deg); }
+  20% { transform: translate(-3px, 0px) rotate(1deg); }
+  30% { transform: translate(3px, 2px) rotate(0deg); }
+  40% { transform: translate(1px, -1px) rotate(1deg); }
+  50% { transform: translate(-1px, 2px) rotate(-1deg); }
+  60% { transform: translate(-3px, 1px) rotate(0deg); }
+  70% { transform: translate(3px, 1px) rotate(-1deg); }
+  80% { transform: translate(-1px, -1px) rotate(1deg); }
+  90% { transform: translate(1px, 2px) rotate(0deg); }
+  100% { transform: translate(1px, -2px) rotate(-1deg); }
+}
